tests/rosetta/out/C/100-prisoners.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T13:32:03Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <time.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static long long _now() {
  struct timespec ts;
  clock_gettime(CLOCK_REALTIME, &ts);
  return (long long)ts.tv_sec * 1000000000LL + ts.tv_nsec;
}
list_int shuffle(list_int xs) {
  list_int arr = xs;
  int i = 99;
  while (i > 0) {
    long long j = _now() % (i + 1);
    int tmp = arr.data[i];
    arr.data[i] = arr.data[j];
    arr.data[j] = tmp;
    i = i - 1;
  }
  return arr;
}

int doTrials(int trials, int np, char *strategy) {
  int pardoned = 0;
  int t = 0;
  while (t < trials) {
    list_int drawers = list_int_create(0);
    int i = 0;
    while (i < 100) {
      drawers = 0;
      i = i + 1;
    }
    drawers = shuffle(drawers);
    int p = 0;
    int success = 1;
    while (p < np) {
      int found = 0;
      if ((strcmp(strategy, "optimal") == 0)) {
        int prev = p;
        int d = 0;
        while (d < 50) {
          int this = drawers.data[prev];
          if (this == p) {
            found = 1;
            break;
          }
          prev = this;
          d = d + 1;
        }
      } else {
        list_int tmp1 = {0, NULL};
        list_int opened = tmp1;
        int k = 0;
        while (k < 100) {
          int tmp2_data[1];
          list_int tmp2 = {1, tmp2_data};
          tmp2.data[0] = 0;
          list_int tmp3 = concat_list_int(opened, tmp2);
          opened = tmp3;
          k = k + 1;
        }
        int d = 0;
        while (d < 50) {
          int n = _now() % 100;
          while (opened.data[n]) {
            n = _now() % 100;
          }
          opened.data[n] = 1;
          if (drawers.data[n] == p) {
            found = 1;
            break;
          }
          d = d + 1;
        }
      }
      if ((!found)) {
        success = 0;
        break;
      }
      p = p + 1;
    }
    if (success) {
      pardoned = pardoned + 1;
    }
    t = t + 1;
  }
  double rf = ((double)(pardoned)) / ((double)(trials)) * 100.0;
  char *tmp4 = concat_string("  strategy = ", strategy);
  char *tmp5 = concat_string(tmp4, "  pardoned = ");
  char *tmp6 = _str(pardoned);
  char *tmp7 = concat_string(tmp5, tmp6);
  char *tmp8 = concat_string(tmp7, " relative frequency = ");
  char *tmp9 = _str(rf);
  char *tmp10 = concat_string(tmp8, tmp9);
  char *tmp11 = concat_string(tmp10, "%");
  printf("%s\n", tmp11);
}

int mochi_main() {
  int trials = 1000;
  list_int tmp12 = list_int_create(2);
  tmp12.data[0] = 10;
  tmp12.data[1] = 100;
  for (int tmp13 = 0; tmp13 < 2; tmp13++) {
    int np = tmp12[tmp13];
    char *tmp14 = _str(trials);
    char *tmp15 = concat_string("Results from ", tmp14);
    char *tmp16 = concat_string(tmp15, " trials with ");
    char *tmp17 = _str(np);
    char *tmp18 = concat_string(tmp16, tmp17);
    char *tmp19 = concat_string(tmp18, " prisoners:\n");
    printf("%s\n", tmp19);
    list_string tmp20 = list_string_create(2);
    tmp20.data[0] = "random";
    tmp20.data[1] = "optimal";
    for (int tmp21 = 0; tmp21 < tmp20.len; tmp21++) {
      char *strat = tmp20.data[tmp21];
      doTrials(trials, np, strat);
    }
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
